--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "nodemon": "^2.0.20",
+    "peer": "^0.6.1",
     "socket.io": "^4.6.0"
   }
 }
